--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10",
+    "axios": "^1.6.5",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
     "postcss": "^8",
