--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.5",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
